v0.13.3 (18-8-2012)
* Changed behaviour of "whole words" feature. Now it supports all Unicode letters thanks to XRegExp and distinguishes between word characters,
  non-word characters, and spaces or separators. This solves issue 36.

v0.13.2 (18-7-2012)
* Fixed bug of auto-replace not working in OS X (issue 80).
* Compatibility with Firefox up to 17.0a1.

v0.13.1 (5-7-2012)
* Fixed bug in loading input type from JSON (a.k.a. "undefined" error) (issue 70).
* Fixed bug in importing from XML when there was more than one URL (issue 71).

v0.13.0 (1-7-2012)
* Subscription works from local files (URL file://...) (issue 25).
* Updated RegExp link in help file (issue 28).
* Added new XPaths to select text nodes (issues 35, 53).
* Fixed bug causing double substitution in title (issue 63).
* Fixed bug causing double substitution sometimes in textareas (issue 63).
* Substitution list stored and exported as JSON (0.13) instead of XML (issue 67). XML kept as read-only.
* Integration with the Firefox app menu.
* Display of substitution list is updated after each subscription update.
* Status of subscription displayed in options window.
* Fixed instantiation of XMLHttpRequest for import from URL.
* Compatibility with Firefox 4 to 15.
* New locales:
  - lt (by Algimantas Margevičius)
  - sv-SE (by Lakrits)
  - zh-TW (by 林郁翔)

v0.12.2 (10-8-2009)
* Bugfix: the modules directory wasn't included in the XPI.

v0.12.1 (5-8-2009)
* Added minimum width to some columns in the options and substitution group editor dialogs.
* Substitution group editor modified to reduce height.
* New locale:
  - zh-CN (by yfdyh000).

v0.12.0 (21-7-2009)
* Subscription to update the substitution list periodically from an URL.
* Ability to use backslash-escaped characters in input (text and whole words) and output. Supported
  characters are \\ (backslash), \n (new line), \r (carriage return) and \t (tab).
* New list format 0.12 with the new interpretation of the backslash-escaped characters.